--- a/sass/style.sass
+++ b/sass/style.sass
@@ -242,7 +242,7 @@ body
 
 //DIRECTIONS
 
-.dir-title
+.direction-title
   width: 523px
   color: rgba(0, 0, 0, 0.9)
   font-family: Commissioner
@@ -250,4 +250,60 @@ body
   font-weight: 400
   font-style: normal
   letter-spacing: 0.84px
-  line-height: 40px
+  line-height: 35px
+  
+
+.card-title
+  width: 180px
+  height: 90p
+  color: rgba(0, 0, 0, 0.9)
+  font-family: Commissioner
+  font-size: 20px
+  font-weight: 400
+  margin-top: 15px
+  line-height: 30px
+
+.card-link
+  color: rgba(0, 0, 0, 0.5)
+  font-family: $lato
+  font-size: 12px
+  font-weight: 800
+  text-decoration: none
+  letter-spacing: 0.24px
+  line-height: 20px
+  text-align: left
+  text-transform: uppercase
+
+.card-link:hover
+  color: #e2b846
+  transition: .3s
+
+
+
+.card-name
+  display: flex
+  flex-direction: column
+  justify-content: space-around
+
+  
+
+.dir-card
+  display: flex
+  justify-content: space-around
+  width: 370px
+  height: 140px
+  background-color: #ffffff
+
+.card-img
+  display: flex
+  justify-content: center
+  align-items: center
+  width: 80px
+  height: 80px
+  border: 1px solid rgba(0, 0, 0, 0.1)
+  border-radius: 50%
+  margin-top: 15px
+  
+
+.img-items
+  
